# EgyptianRat

./: .gitignore  CMakeLists.txt  README.md  card.h  cardDeck.h  clean.bash  eventHandler.h  gameLogic.h  gameMenu.h  gameTable.h  initializer.h  main.cpp  player.h  titleScreen.h
Game/: CMakeLists.txt  Makefile
Game/headers/: gameLogic.h  gameMenu.h  player.h
Game/src/: placeHolder.cpp
Initialize/: CMakeLists.txt  Makefile
Initialize/headers/: initializer.h
UnitTests/: CMakeLists.txt  cardDeck_test.h  g++Compile.sh  gameLogic_test.h  miscellaneous_test.h  testHarness.cpp
